<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    style="@android:style/Widget.Holo.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:fadeScrollbars="false"
    android:scrollbarSize="6dp"
    android:scrollbarStyle="outsideInset"
    android:scrollbarThumbVertical="@drawable/cool_gradient">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:translationY="0dp">

        <ImageView
            android:id="@+id/wherezaLogo2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="96dp"
            android:background="#000000"
            android:contentDescription="@string/logo"
            android:src="@drawable/whereza_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wherezaText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron"
            android:text="@string/whereza"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.288" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#8C2020"
            android:contentDescription="@string/please_select_a_rating_for_the_attraction"
            android:foregroundTint="#A14B4B"
            android:indeterminateTint="#FFFFFF"
            android:numStars="5"
            android:progressBackgroundTint="#59FFFFFF"
            android:progressTint="#f853ca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wherezaText2" />

        <Spinner
            android:id="@+id/attractions"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_corners_shape"
            android:contentDescription="@string/please_select_an_attraction"
            android:popupBackground="@drawable/popup_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="#000000"
            android:fontFamily="@font/orbitron"
            android:text="@string/open_right_now"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:thumbTint="#f853ca"
            android:trackTint="#2cb3fb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeAddress"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/placeAddress"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/orbitron"
            android:text="@string/that_is"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_state" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/orbitron"
            android:text="@string/and"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/orbitron"
            android:text="@string/in"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attractions" />

        <AutoCompleteTextView
            android:id="@+id/city_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="#00F853CA"
            android:ems="10"
            android:hint="@string/city_state"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#f853ca"
            android:textColorHighlight="#2cb3fb"
            android:textColorHint="#2cb3fb"
            android:textColorLink="#f853ca"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <SeekBar
            android:id="@+id/costScale"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:background="#00FFFFFF"
            android:max="3"
            android:progress="1"
            android:progressDrawable="@drawable/progress_drawn"
            android:scrollbarSize="64sp"
            android:splitTrack="false"
            android:thumb="@drawable/dollar_sign_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/orbitron"
            android:text="@string/affordable"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/costScale" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#f853ca"
            android:scrollbarSize="16dp"
            android:text="@string/search"
            app:icon="@android:drawable/ic_menu_search"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cost" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


